applications/tenants/ferme-du-jointout/production/nextcloud/ingress-aliases.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-aliases
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: cloud.fermedujointout.fr
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nextcloud
              port:
                number: 8080
  tls:
    - secretName: cloud.fermedujointout.fr-tls
      hosts:
        - cloud.fermedujointout.fr
