applications/tenants/ferme-du-jointout/production/nextcloud/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: ferme-du-jointout-nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nextcloud.fermedujointout.fr,cloud.fermedujointout.fr
    external-dns.alpha.kubernetes.io/target: fermedujointout.fr
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.fermedujointout.fr`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
    - match: Host(`cloud.fermedujointout.fr`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls:
    secretName: wildcard-ferme-du-jointout-tls
